# Janus

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  go.mod  janus.py  pyproject.toml  requirements.txt
.claude/commands/: janus-analyzer.md  janus-ingestor.md  janus-interpret.md
.github/workflows/: release.yml
Analyzers/: __init__.py
Analyzers/CommandAnalysis/: __init__.py  av_tracker.py  command_duration.py  command_failure_summary.py  command_retry_success.py  friction_score.py  outlier_context.py
Analyzers/SummaryAnalysis/: summary_visualization.py
Analyzers/ToolingAnalysis/: __init__.py  argument_position_profile.py  tool_dump.py
Analyzers/WorkflowAnalysis/: __init__.py  callback_health.py  dwell_time.py  parameter_entropy.py
Config/: analyzer_registry.yml  analyzers.yml  av_signature_registry.yml  friction_score_registry.yml  janus.example.yml  tool_dump_registry.yml
Core/: __init__.py  analyzer_behavior_registry.py  analyzer_command_grouping.py  analyzer_registry.py  av_signature_registry.py  data_quality.py  diff_compare.py  diff_load.py  diff_metrics.py  diff_render_text.py  event_utils.py  friction_score_registry.py  html_output.py  io.py  models.py  output_rule.py
Parsers/: __init__.py
Parsers/CobaltStrike/: __init__.py  cobalt_strike_rest.py
Parsers/Ghostwriter/: __init__.py  client.py  ghostwriter_pull.py  gql_queries.py  main.py  models.py  queries.py
Parsers/Mythic/: __init__.py  gql_queries.py  mythic_pull.py  partial_data_adapter.py  (+1 more)
docs/: FAQ.md  architecture.md
(+19 files in other folders)
